# RoboAutonomo

./: README.md
ros2_ws/: executar  executar_mapa.txt  execute.txt  makefile_navigation  makefile_voice
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/auto_mapper_py/lib/auto_mapper_py/: auto_mapper_node
ros2_ws/install/auto_mapper_py/share/auto_mapper_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/explorer_bringup/share/explorer_bringup/: package.sh
ros2_ws/install/explorer_cartographer/share/explorer_cartographer/: local_setup.sh  package.sh
ros2_ws/install/explorer_gazebo/share/explorer_gazebo/: local_setup.sh  package.sh
ros2_ws/install/explorer_interfaces/share/explorer_interfaces/: package.sh
ros2_ws/install/explorer_map_utils/share/explorer_map_utils/: package.sh
ros2_ws/install/explorer_wanderer/share/explorer_wanderer/: package.sh
ros2_ws/install/mapviz/share/mapviz/: package.sh
ros2_ws/install/mapviz_interfaces/share/mapviz_interfaces/: package.sh
ros2_ws/install/mapviz_plugins/share/mapviz_plugins/: package.bash  package.zsh
ros2_ws/install/turtlbot3_custom/share/turtlbot3_custom/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/turtlbot3_custom/share/turtlbot3_custom/cmake/: turtlbot3_customConfig.cmake
ros2_ws/install/turtlbot3_custom/share/turtlbot3_custom/launch/: turtlebot3_world.launch.py
ros2_ws/install/turtlbot3_custom/share/turtlbot3_custom/worlds/: path1.world  path2.world
ros2_ws/launch/: map_launch.py
ros2_ws/log/: latest_build
ros2_ws/maps/: mapa.pgm  mapa.yaml
ros2_ws/src/meu_pacote_launch/: package.xml  setup.cfg  setup.py
ros2_ws/src/meu_pacote_launch/meu_pacote_launch/: all_nodes.launch.py
ros2_ws/src/ros2_whisper/: setup.py
ros2_ws/src/ros2_whisper/ros2_whisper/: whisper_node.py
ros2_ws/src/voice_control/: package.xml  setup.py
(+27 files in other folders)
