<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>meu_pacote_launch</name>
  <version>0.0.0</version>
  <description>Pacote para executar nós de launch integrados (map_server, static tf, navigation2, gazebo)</description>
  <maintainer email="felipescamillo2020@gmail.com">felipe</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependências de execução para os arquivos de launch -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

